--- a/app/prj.conf
+++ b/app/prj.conf
@@ -17,6 +17,9 @@ CONFIG_ADC=y
 CONFIG_SERIAL=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
 
+# Memoria
+#CONFIG_STORAGE=y
+
 #I2C display
 # CONFIG_I2C=y
 # CONFIG_DISPLAY=y
