--- a/app/boards/rpi_pico-pinctrl.dtsi
+++ b/app/boards/rpi_pico-pinctrl.dtsi
@@ -20,12 +20,13 @@
 // old pinctrl:
 
 	uart0_default: uart0_default {
-		group1 {
-			pinmux = <UART0_TX_P0>;
-		};
-		group2 {
-			pinmux = <UART0_RX_P1>;
+		rx_pins {
+			pinmux = <PIO1_P1>;
 			input-enable;
+			bias-pull-up;
+		};
+		tx_pins {
+			pinmux = <PIO1_P0>;
 		};
 	};
 
