--- a/app/prj.conf
+++ b/app/prj.conf
@@ -21,13 +21,13 @@ CONFIG_UART_INTERRUPT_DRIVEN=y
 #CONFIG_STORAGE=y
 
 #I2C display
-# CONFIG_I2C=y
-# CONFIG_DISPLAY=y
-# CONFIG_SSD1306=y
-# CONFIG_SSD1306_DEFAULT=y
-# CONFIG_SSD1306_DEFAULT_CONTRAST=128
-# CONFIG_LOG=y
-# CONFIG_CHARACTER_FRAMEBUFFER=y
-# CONFIG_STDOUT_CONSOLE=y
-# CONFIG_HEAP_MEM_POOL_SIZE=16384
-# CONFIG_CFB_LOG_LEVEL_DBG=y
+CONFIG_I2C=y
+CONFIG_DISPLAY=y
+CONFIG_SSD1306=y
+CONFIG_SSD1306_DEFAULT=y
+CONFIG_SSD1306_DEFAULT_CONTRAST=128
+CONFIG_LOG=y
+CONFIG_CHARACTER_FRAMEBUFFER=y
+CONFIG_STDOUT_CONSOLE=y
+CONFIG_HEAP_MEM_POOL_SIZE=16384
+CONFIG_CFB_LOG_LEVEL_DBG=y
